--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color: #10403b;
+  width: 100vw;
   height: 100vh;
 }
 div {
@@ -8,8 +9,8 @@ div {
 }
 .todo__container {
   background-color: #8aa6a3;
-  width: 30%;
-  height: 80%;
+  width: 100%;
+  height: 70%;
   border: 1px solid #8aa6a3;
   border-radius: 12px;
   padding: 20px;
@@ -49,31 +50,26 @@ div {
 
 /* TodoCreate */
 .create__box {
-  width: 100%;
+  width: 92%;
+  display: flex;
   position: absolute;
   bottom: 35px;
-  left: 0;
-}
-.create__box form {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 }
 .create__input {
   background-color: #bfbfbf;
-  width: 450px;
-  height: 52px;
+  width: 85%;
   outline: none;
   padding: 15px;
   box-sizing: border-box;
   border: 1px solid #10403b;
 }
 .create__button {
+  width: 15%;
   border: 0;
   background-color: #10403b;
   outline: none;
   color: #8aa6a3;
-  font-size: 41px;
+  font-size: 25px;
   cursor: pointer;
   box-sizing: border-box;
 }
@@ -92,27 +88,48 @@ div {
   padding-bottom: 25px;
 }
 .todolist__content__box {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: -10px 30px 0 30px;
+  margin: 10px 0;
+  border: 1px solid #10403b;
+  padding: 0 15px;
+  border-radius: 10px;
+  background-color: #10403b;
+}
+.todolist__items {
+  width: 100%;
+  display: flex;
+}
+.todolist__checkbox {
+  cursor: pointer;
 }
 .todolist__content {
-  text-align: left;
+  color: #8aa6a3;
+  padding: 0 10px;
 }
 .todolist__delete {
+  background-color: #10403b;
   border: 0;
-  background-color: #8aa6a3;
-  color: #10403b;
-  font-size: 23px;
+  padding: 15px;
+  color: #8aa6a3;
+  font-size: 20px;
   cursor: pointer;
 }
 .todolist__delete:hover {
   color: #127369;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1024px) {
   .todo__container {
-    width: 80%;
+    max-width: 32rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .todo__container {
+    width: 75%;
+    max-width: 32rem;
   }
 }
